Eliminate multiple warnings : Constructors and unused imports